--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,7 +109,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important;
+    /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important; */
 }
 
 .logo img {
