--- a/Dashboard/settings.css
+++ b/Dashboard/settings.css
@@ -46,3 +46,30 @@ body {
 .custom-file-upload input {
     display: none;
 }
+.error-message {
+    color: red;
+    font-size: 12px;
+    display: none;
+}
+.input-error {
+    border: 1px solid red !important;
+}
+
+
+.modal {
+    display: none;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+.modal-content {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: green;
+}
