--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,53 +116,6 @@ nav {
     height: 80px;
 }
 
-.menu {
-    display: flex;
-    align-items: center;
-    gap: 25px;
-}
-
-.menu a {
-    color: var(--bodytext);
-    text-decoration: none;
-    font-size: 13px;
-    font-weight: 500;
-    transition: 0.3s ease;
-    text-transform: uppercase;
-}
-
-.menu a:hover {
-    color: var(--brown);
-}
-
-.box .container-2 {
-    display: flex;
-    align-items: center;
-    background: var(--grey);
-    border-radius: 5px;
-    padding: 5px 10px;
-}
-
-#search {
-    border: none;
-    background: none;
-    padding: 5px;
-    width: 180px;
-    outline: none;
-    color: var(--bodytext);
-}
-
-.menu-btn {
-    display: none;
-    background: none;
-    border: none;
-    font-size: 24px;
-    cursor: pointer;
-    color: var(--bodytext);
-}
-
-
-
 
 .input-wrapper {
     display: flex;
@@ -180,10 +133,7 @@ nav {
     outline: none;
     border-radius: 50%;
     transition: .5s ease-in-out;
-    /* background-color: var(--brown); */
-    /* box-shadow: 0px 0px 1px var(--icons); */
     padding-right: 40px;
-    color: #fff;
 }
 
 .input::placeholder,
@@ -227,16 +177,6 @@ nav {
     border-bottom: 3px solid var(--brown);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
 
-}
-
-.nav-container {
-    display: flex;
-    gap: 15px;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-    background: var(--white);
-    border-radius: 12px;
 }
 
 .nav-link {
@@ -284,30 +224,6 @@ nav {
         padding: 8px 4px;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1376,7 +1292,7 @@ input:hover {
 }
 
 .modal-header h1{
-    font-family: 'Bodoni Moda', serif;
+    /* font-family: 'Bodoni Moda', serif; */
     color: var(--blue);
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
