--- a/CSS/dtail.css
+++ b/CSS/dtail.css
@@ -16,6 +16,485 @@ body {
     line-height: 1.6;
     background-color: var(--light-grey);
 }
+.navigation {
+  background-color: var(--blue);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 10px;
+}
+
+.header-section {
+  flex: 1;
+  min-width: 250px;
+  margin: 10px;
+  padding-top: 2px;
+}
+
+.header-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+
+.header-icons a,
+.user i {
+  width: 26px;
+  height: 26px;
+  padding: 4px;
+  border: 1px solid var(--grey);
+  border-radius: 50%;
+  font-size: 12px;
+  color: var(--grey);
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+  text-align: center;
+}
+
+/* Hover Effect */
+.header-icons a:hover,
+.user i:hover {
+  background-color: var(--brown);
+  color: var(--white);
+  border-color: var(--brown);
+  transform: scale(1.2);
+}
+
+/* Focus State for Footer Social Media Icons */
+.header-icons a:focus {
+  outline: none;
+  background-color: var(--brown);
+  color: var(--white);
+  border-color: var(--brown);
+}
+
+.login {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.login a {
+  color: var(--white);
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+
+.login a:hover {
+  color: var(--brown);
+}
+
+/* Second Navigation */
+nav {
+  background: transparent;
+  padding: 15px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px !important; */
+}
+
+.logo img {
+  height: 80px;
+}
+
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  position: relative;
+}
+
+.input {
+  border-style: none;
+  height: 50px;
+  width: 50px;
+  padding: 10px;
+  outline: none;
+  border-radius: 50%;
+  transition: .5s ease-in-out;
+  padding-right: 40px;
+}
+
+.input::placeholder,
+.input {
+  font-size: 16px;
+}
+
+.input::placeholder {
+  color: var(--bodytext);
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-right: 13px;
+  position: absolute;
+  right: 0px;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+  outline: none;
+  border-style: none;
+  border-radius: 50%;
+  pointer-events: painted;
+  background-color: transparent;
+  transition: .2s linear;
+  margin-bottom: 2px;
+}
+
+.icon svg path {
+  stroke: var(--blue) !important;
+}
+
+.icon:focus~.input,
+.input:focus {
+  box-shadow: none;
+  width: 250px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 3px solid var(--brown);
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+
+}
+
+.nav-link {
+  text-decoration: none;
+  color: var(--blue);
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px 5px;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+/* Left to Right Underline Effect */
+.nav-link::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--brown);
+  transition: width 0.3s ease;
+}
+
+.nav-link:hover::after,
+.nav-link.active::after {
+  width: 100%;
+}
+
+/* Text Color Change */
+.nav-link:hover,
+.nav-link.active {
+  color: var(--brown);
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .nav-container {
+      gap: 20px;
+      padding: 15px;
+  }
+
+  .nav-link {
+      font-size: 16px;
+      padding: 8px 4px;
+  }
+}
+
+/* Footer Styles */
+.footer {
+  background-color: var(--blue);
+  color: var(--white);
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.footer-section {
+  flex: 1;
+  min-width: 250px;
+  margin: 20px;
+  padding-top: 0;
+}
+
+
+.footer-logo {
+  text-align: left;
+  margin-bottom: 26px;
+}
+
+.footer-logo img {
+  margin-top: 25px;
+  max-width: 200px;
+  height: auto;
+}
+
+.footer-title {
+  font-family: 'Bodoni Moda', serif;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.footer-text {
+  color: var(--white);
+  font-size: 11px;
+  line-height: 1.5;
+}
+
+.footer-heading {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  color: var(--white);
+}
+
+.footer-section {
+  text-align: left;
+}
+
+.footer-list {
+  padding-left: 0;
+}
+
+.footer-list li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.footer-list li i {
+  color: var(--white);
+  margin-right: 8px;
+  font-size: 14px;
+  transition: color 0.3s ease-in-out;
+}
+
+/* Hover Effect on Links and Icons */
+.footer-list li a {
+  color: var(--white);
+  text-decoration: none;
+  transition: color 0.3s ease-in-out;
+}
+
+.footer-list li:hover i,
+.footer-list li:hover a {
+  font-size: 16px;
+  color: var(--brown);
+}
+
+/* Contact Section Styles */
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 50px;
+}
+
+.footer-icons {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+}
+
+.footer-icons a,
+.user i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  padding: 5px;
+  border: 1px solid var(--grey);
+  border-radius: 50%;
+  font-size: 15px;
+  color: var(--grey);
+  transition: all 0.3s ease-in-out;
+  text-decoration: none;
+}
+
+/* Hover Effect */
+.footer-icons a:hover,
+.user i:hover {
+  background-color: var(--brown);
+  color: var(--white);
+  border-color: var(--brown);
+  transform: scale(1.2);
+}
+
+/* Focus State for Footer Social Media Icons */
+.footer-icons a:focus {
+  outline: none;
+  background-color: var(--brown);
+  color: var(--white);
+  border-color: var(--brown);
+}
+
+.footer-input {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.footer-button {
+  background-color: var(--brown);
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.footer-button i {
+  color: var(--white);
+}
+
+/* Focus and Active State for Links */
+.footer-list li a:focus,
+.footer-list li a:active {
+  outline: none;
+  color: var(--brown);
+}
+
+/* Focus and Active State for Icons inside Links */
+.footer-list li a:focus i,
+.footer-list li a:active i {
+  color: var(--brown);
+  font-size: 16px;
+}
+
+
+.user i {
+  width: 26px;
+  height: 26px;
+  font-size: 12px;
+}
+
+/* Responsiveness */
+
+/* navbar */
+
+
+@media (max-width: 1024px) {
+
+  .navigation {
+      /* padding:0px; */
+      flex-direction: column;
+  }
+
+  .box {
+      width: 50%;
+  }
+
+  .container-2 {
+      margin-top: 10px;
+  }
+
+  .menu {
+      top: 154px;
+  }
+}
+
+@media (max-width: 990px) {
+  .navigation {
+      flex-direction: column;
+      height: auto;
+      padding: 15px;
+      gap: 15px;
+  }
+
+  .header-icons {
+
+      justify-content: center;
+      margin: 0px;
+  }
+
+  .textlogo h3 {
+      display: none !important;
+  }
+
+  .links,
+  .login {
+      justify-content: center;
+  }
+
+  nav {
+      padding: 10px 19px;
+  }
+
+  .menu {
+      top: 203px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-container {
+      flex-direction: column;
+      text-align: left;
+      padding: 15px;
+  }
+
+  .contact-section {
+      align-items: center;
+  }
+
+  .footer-icons {
+      justify-content: left
+  }
+}
+
+/* Footer Bottom Section */
+.footer-bottom {
+  text-align: center;
+  padding: 15px 0;
+  background-color: var(--white);
+  color: var(--bodytext);
+  font-size: 14px;
+  border-top: 1px solid var(--grey);
+}
+
+.footer-bottom span {
+  color: var(--brown);
+  font-weight: bold;
+}
+
+.footer-bottom a {
+  display: block;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--bodytext);
+  margin-top: 5px;
+  transition: color 0.3s ease-in-out;
+}
+
+.footer-bottom a:hover {
+  color: var(--brown);
+}
+
+.header-section {
+  flex-grow: 1;
+}
+
+.header-icons {
+  justify-content: end !important;
+  margin-right: 40px;
+}
+
 
 /* Recipe Content Container */
 #recipeContainer {
