--- a/CSS/style.css
+++ b/CSS/style.css
@@ -230,12 +230,15 @@ nav {
 /* herosection */
 
 .hero-section {
-    background: linear-gradient(144deg, rgba(191, 191, 204, 0.6222864145658263) 0%, rgba(179, 122, 100, 0.7539390756302521) 100%);
+    /* background: linear-gradient(144deg, rgba(191, 191, 204, 0.6222864145658263) 0%, rgba(179, 122, 100, 0.7539390756302521) 100%); */
     padding: 4rem 0;
     background: var(--grey);
     position: relative;
     overflow: hidden;
     padding: 0.5rem;
+    background-image: url("../Assets/bg.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .leaf-decoration {
@@ -309,8 +312,8 @@ nav {
 
 .hero-image {
     position: relative;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
 }
 
 .hero-image img {
@@ -318,15 +321,19 @@ nav {
     height: auto;
     object-fit: cover;
     border-radius: 20px;
+    z-index: 1000;
 }
 
 @media (max-width: 768px) {
     .hero-title {
-        font-size: 2.5rem;
+        padding-top: 2rem;
+        font-size: 2rem;
+        text-align: center;
     }
 
-    .hero-subtitle {
-        font-size: 2rem;
+    .hero-text {
+        font-size: 1rem;
+        text-align: center;
     }
 
     .search-container {
@@ -436,12 +443,21 @@ nav {
     background: var(--brown);
     color: var(--white);
 }
+.explore{
+    background-color: var(--brown);
+    color: var(--white);
+}
+.explore:hover{
+    background-color: var(--blue);
+    color: var(--white);
+}
+
 
 /* more catogries */
 
 .slider-container {
     max-width: 1200px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     position: relative;
 }
 
@@ -457,7 +473,6 @@ nav {
     min-width: 280px;
     background: var(--white);
     border-radius: 20px;
-    padding: 25px;
     text-align: center;
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     cursor: pointer;
@@ -466,6 +481,9 @@ nav {
     border: 2px solid transparent;
     flex-shrink: 0;
     border-color: var(--blue);
+    padding: 10px;
+    box-shadow: 0 1px 10px rgba(0, 0, 0, .08);
+
 }
 
 .recipe-card:hover {
@@ -881,28 +899,8 @@ nav {
         flex-direction: column;
     }
 
-    .menu-btn {
-        display: block;
-    }
-
-    .menu {
-        display: none;
-        position: absolute;
-        top: 130px;
-        left: 0;
-        right: 0;
-        background: var(--white);
-        flex-direction: column;
-        padding: 20px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    .menu.active {
-        display: flex;
-    }
-
     .box {
-        width: 100%;
+        width: 50%;
     }
 
     .container-2 {
